@@ -9,6 +9,7 @@ class ProjectConfiguration < ConfigurationParameter
     {
       'rails' => Webistrano::Template::Rails,
       'mongrel_rails' => Webistrano::Template::MongrelRails,
+      'mod_rails' => Webistrano::Template::ModRails,
       'pure_file' => Webistrano::Template::PureFile
     }
   end
