@@ -2,3 +2,4 @@ require "webistrano/template/base"
 require "webistrano/template/rails"
 require "webistrano/template/mongrel_rails"
 require "webistrano/template/pure_file"
+require "webistrano/template/mod_rails"
